[gd_scene load_steps=21 format=3 uid="uid://cnhu1y68s4bqw"]

[ext_resource type="Script" uid="uid://bd2i0al5hbdor" path="res://micro-games/pong/Scripts/main.gd" id="1_nw6fu"]
[ext_resource type="PackedScene" uid="uid://chh17gfjiuc8g" path="res://micro-games/pong/Scenes/ball.tscn" id="2_ti17h"]
[ext_resource type="Shader" uid="uid://dxk1p7lqyv1l2" path="res://Assets/horizontal_scoll.gdshader" id="3_kep0a"]
[ext_resource type="Texture2D" uid="uid://c51387t60l3tu" path="res://micro-games/pong/Assets/Sprites/line_vertical.png" id="4_jt484"]
[ext_resource type="FontFile" uid="uid://ccd112efv7p7u" path="res://micro-games/pong/Assets/Typefaces/pixel_font.ttf" id="4_xhghc"]
[ext_resource type="Shader" uid="uid://bvnrposymw72y" path="res://Assets/vertical_scrolling.gdshader" id="5_33fxn"]
[ext_resource type="PackedScene" uid="uid://cxutjwkvqlv3n" path="res://micro-games/pong/Scenes/player_pad.tscn" id="5_88uw1"]
[ext_resource type="PackedScene" uid="uid://dq8d4bhwbfisl" path="res://micro-games/pong/Scenes/cpu_pad.tscn" id="6_s1rk8"]
[ext_resource type="Texture2D" uid="uid://b5gisdhyc88fb" path="res://micro-games/pong/Assets/Sprites/line_horizontal.png" id="6_utdoe"]
[ext_resource type="AudioStream" uid="uid://b00v4gqfyydb8" path="res://micro-games/pong/Assets/SFX/score.mp3" id="7_e0tka"]
[ext_resource type="Texture2D" uid="uid://bdcvqcwsjogtf" path="res://micro-games/pong/Assets/Sprites/line_dotted.png" id="7_utdoe"]
[ext_resource type="Texture2D" uid="uid://bee4f3d1e08uw" path="res://micro-games/pong/Assets/Sprites/icon-arrow.png" id="8_g76xa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33fxn"]
shader = ExtResource("3_kep0a")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g76xa"]
shader = ExtResource("5_33fxn")

[sub_resource type="LabelSettings" id="LabelSettings_jt484"]
font = ExtResource("4_xhghc")
font_size = 32
font_color = Color(0.945098, 0.941176, 0.917647, 1)
outline_size = 12
outline_color = Color(0.54902, 0.109804, 0.0745098, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.239216)
shadow_offset = Vector2(-5, 5)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jt484"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_33fxn"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8gbba"]
distance = -3.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vca8a"]
distance = 247.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3yxvl"]
distance = 269.75

[node name="Main" type="Node2D" node_paths=PackedStringArray("player_paddle", "cpu_paddle")]
script = ExtResource("1_nw6fu")
use_ball = ExtResource("2_ti17h")
player_paddle = NodePath("PlayerPad")
cpu_paddle = NodePath("CpuPad")
paddles_padding = 0.1

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -23.0
offset_top = -30.0
offset_right = 417.0
offset_bottom = 861.0
color = Color(0.945098, 0.941176, 0.917647, 1)
metadata/_edit_use_anchors_ = true

[node name="VertLine" type="TextureRect" parent="ColorRect"]
texture_repeat = 2
material = SubResource("ShaderMaterial_33fxn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jt484")
metadata/_edit_use_anchors_ = true

[node name="HozLine" type="TextureRect" parent="ColorRect"]
texture_repeat = 2
material = SubResource("ShaderMaterial_g76xa")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -2.0
offset_right = 7.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_utdoe")
metadata/_edit_use_anchors_ = true

[node name="MidLine" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_utdoe")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ColorRect/MidLine"]
layout_mode = 0
offset_left = 79.0
offset_top = -53.5
offset_right = 143.0
offset_bottom = 34.5
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_g76xa")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="ColorRect/MidLine"]
layout_mode = 0
offset_left = 79.0
offset_top = 18.5
offset_right = 143.0
offset_bottom = 106.5
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_g76xa")
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="State_Score" type="Label" parent="ColorRect"]
z_index = 2
z_as_relative = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 94.0
offset_right = 127.0
offset_bottom = 137.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.983395, 0.738803, 0.460848, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.470588)
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("4_xhghc")
theme_override_font_sizes/font_size = 43
text = "FIGHT!"
label_settings = SubResource("LabelSettings_jt484")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayerPad" parent="." instance=ExtResource("5_88uw1")]
z_index = 99
position = Vector2(-630, -429)

[node name="CpuPad" parent="." instance=ExtResource("6_s1rk8")]
z_index = 99
position = Vector2(-565, -430)

[node name="NewBallTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioManagement" type="Node" parent="."]

[node name="SFX" type="Node" parent="AudioManagement"]

[node name="ScoredSFX" type="AudioStreamPlayer" parent="AudioManagement/SFX"]
stream = ExtResource("7_e0tka")
bus = &"SFX"

[node name="BtnUp" type="TouchScreenButton" parent="."]
position = Vector2(-3.63798e-12, 408)
rotation = 3.14159
scale = Vector2(0.74, 0.74)
shape = SubResource("WorldBoundaryShape2D_jt484")
action = "Move_Up"

[node name="BtnDown" type="TouchScreenButton" parent="."]
position = Vector2(0, 424)
scale = Vector2(0.74, 0.74)
shape = SubResource("WorldBoundaryShape2D_33fxn")
action = "Move_Down"

[node name="Borders" type="StaticBody2D" parent="."]
position = Vector2(194, 746)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders"]
position = Vector2(0, 99)
shape = SubResource("WorldBoundaryShape2D_8gbba")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders"]
position = Vector2(-1, -742)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_8gbba")

[node name="LeftScore" type="Area2D" parent="."]
position = Vector2(192, 424)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftScore"]
position = Vector2(-602, 6.25)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_vca8a")

[node name="RightScore" type="Area2D" parent="."]
position = Vector2(192, 424)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightScore"]
position = Vector2(607.75, -3.75)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_3yxvl")

[connection signal="timeout" from="NewBallTimer" to="." method="_on_new_ball_timer_timeout"]
[connection signal="body_entered" from="LeftScore" to="." method="_on_left_score_body_entered"]
[connection signal="body_entered" from="RightScore" to="." method="_on_right_score_body_entered"]
